--- a/urb/zod/pub/tree/src/css/main.css
+++ b/urb/zod/pub/tree/src/css/main.css
@@ -94,6 +94,9 @@ a {
   display: inline-block;
   line-height: 0.8rem;
 }
+a:visited {
+  opacity: 0.5;
+}
 hr {
   display: inline-block;
   width: 6rem;
@@ -104,7 +107,8 @@ h1 {
   margin-top: 4rem;
   line-height: 2.6rem;
 }
-#body > div > h1:first-of-type {
+#body > div > h1:first-of-type,
+#body div.short > h1:first-of-type {
   margin-top: 1rem;
 }
 h2,
@@ -235,9 +239,16 @@ li:before {
   transition: opacity 1s ease-in-out;
   z-index: 4;
 }
+img.logo.black {
+  content: url("https://storage.googleapis.com/urbit-extra/logo/logo-black-100x100.png");
+}
+img.logo.white {
+  content: url("https://storage.googleapis.com/urbit-extra/logo/logo-white-100x100.png");
+}
 img.logo {
   height: 2rem;
   width: 2rem;
+  margin-top: 1rem;
 }
 h3.time {
   margin-top: 0.3rem;
@@ -459,6 +470,13 @@ div.toc h1.t {
   background-color: #fff;
   padding-right: 1rem;
   margin-left: -1rem;
+}
+.footer {
+  font-family: 'scp';
+  font-size: 0.7rem;
+  font-weight: 400;
+  margin-top: 3rem;
+  color: #ccc;
 }
 .error {
   color: #f91733;
