--- a/urb/zod/pub/tree/src/css/leads.styl
+++ b/urb/zod/pub/tree/src/css/leads.styl
@@ -5,6 +5,7 @@
   
   .bar
     margin-top 2rem
+    margin-bottom 2rem
     & > div
       display inline-block
     a.logo
@@ -14,14 +15,18 @@
       border none
     img.logo
       margin-right 18px
+      margin-top 0
     ul.list.nav
       margin 0
+      line-height 2rem
       li
         display inline-block
         margin-bottom 0
         margin-right 1rem
+        vertical-align middle
       li a
         border-bottom none
+        text-decoration none
       h1
         text-decoration none
         border-bottom 2px solid #000
@@ -58,6 +63,9 @@
     color #ccc
     p
       margin 0
+    code
+      line-height 1rem
+      font-size .7rem
 
   input.email
     border-radius 0
