blog styles and email component

--- a/urb/zod/pub/tree/src/css/leads.styl
+++ b/urb/zod/pub/tree/src/css/leads.styl
@@ -53,8 +53,10 @@
     line-height 2.6rem
 
   a
-    line-height 1.6rem
     line-height 1rem
+  
+  .mono
+    font-size 1.3rem
 
   .footer
     margin 4rem 0 4rem 0
