--- a/urb/zod/pub/tree/src/css/main.styl
+++ b/urb/zod/pub/tree/src/css/main.styl
@@ -22,11 +22,16 @@ html
 
 a
   color #000
+  border-bottom 1px solid #000
+  text-decoration none
   display inline-block
   line-height .8rem
 
 a:visited
   opacity .5
+
+a code
+  line-height inherit
 
 hr
   display inline-block
@@ -76,6 +81,7 @@ pre
   background-color #f5f5f5
   padding .3rem
   margin-left -.3rem
+  white-space pre-line
 
 code
   line-height 1.2rem
@@ -193,7 +199,7 @@ h3.time
   overflow hidden
 
 #nav #sibs > div
-  margin-bottom 4px
+  margin-bottom .6rem
 
 .focus #sibs
   margin-top 0 !important
