--- a/urb/zod/pub/tree/src/css/main.styl
+++ b/urb/zod/pub/tree/src/css/main.styl
@@ -114,6 +114,7 @@ li:before
   position fixed
   top 0rem
   width 57rem
+  height 100%
   padding-top 1rem
   z-index 0
   margin-left -32rem
@@ -130,7 +131,7 @@ li:before
   transition opacity .3s ease-in-out
 
 #cont
-  position absolute
+  position relative
   top 0
   margin-bottom 9rem
 
@@ -212,6 +213,15 @@ h3.time
   line-height 1rem
   font-weight 200
   letter-spacing 1px
+
+#nav .link-next
+  position absolute
+  bottom 4rem
+  margin-left 1rem
+  
+  a
+    font-weight 500
+    font-size 1rem
 
 .list > li > a
   margin-bottom .3rem
