--- a/urb/zod/pub/tree/src/css/mobile.styl
+++ b/urb/zod/pub/tree/src/css/mobile.styl
@@ -14,14 +14,23 @@
     opacity 1
     width 42rem
     margin-left -21rem
-    background-color #fff
+    background-color transparent
     z-index 2
+  
+  #nav > div
+    background-color #fff
   
   #nav a
     white-space nowrap
     
   #nav #sibs > div
     height 20px
+    margin-bottom 4px
+  
+  #nav #sibs > div.active a
+  #nav #sibs > div a
+    border-bottom none
+    text-decoration underline
 
   #nav.m-down
   #nav.m-up
@@ -60,11 +69,10 @@
     padding-top 0
     opacity 1
     left 0
-    background-color #fff
     z-index 2
   
   #nav > div > div
-    max-height 1.4rem
+    max-height 1.2rem
   
   #nav > div
     padding-top .6rem
