--- a/urb/zod/pub/tree/src/css/main.styl
+++ b/urb/zod/pub/tree/src/css/main.styl
@@ -114,7 +114,6 @@ li:before
   position fixed
   top 0rem
   width 57rem
-  height 100%
   padding-top 1rem
   z-index 0
   margin-left -32rem
@@ -213,15 +212,11 @@ h3.time
   line-height 1rem
   font-weight 200
   letter-spacing 1px
+  display inline
 
 #nav .link-next
-  position absolute
-  bottom 4rem
-  margin-left 1rem
-  
-  a
-    font-weight 500
-    font-size 1rem
+  margin-top 2rem
+  font-weight 500
 
 .list > li > a
   margin-bottom .3rem
@@ -229,10 +224,6 @@ h3.time
 .list > li > a h1
   font-size inherit
   line-height inherit
-
-#nav a
-.list > li > a h1
-  margin-right .3rem
 
 #nav .active a
   font-weight 500
@@ -246,6 +237,7 @@ h3.time
   float right
 
 #sides a
+  display inline-block
   margin-right .6rem
 
 .arow-up
