--- a/urb/zod/pub/tree/src/css/posts.styl
+++ b/urb/zod/pub/tree/src/css/posts.styl
@@ -2,7 +2,6 @@ div.post
   h1
     font-size 2.8rem
     line-height 4rem
-    display block
     margin-top 1rem
     margin-bottom 1rem
   
@@ -22,6 +21,13 @@ div.post
     content '\2014'
     margin-right .3rem
   
+  .list li 
+    margin-bottom 0
+    font-size 1.2rem
+  .list li:before
+    line-height 2.3rem
+    vertical-align top
+
   p
     font-size 1.2rem
     line-height 2.2rem
