--- a/urb/zod/pub/tree/src/css/main.styl
+++ b/urb/zod/pub/tree/src/css/main.styl
@@ -20,6 +20,10 @@ html
   line-height 1.6rem
   -webkit-text-size-adjust none
 
+p
+  font-size 1.2rem
+  line-height 2rem
+
 a
   color #000
   border-bottom 1px solid #000
@@ -75,7 +79,7 @@ h3 code
 
 pre
 code
-  font-size .8rem
+  font-size 1rem
 
 pre
   background-color #f5f5f5
@@ -95,10 +99,11 @@ ul
   padding 0
 
 li:before
-  content "+"
+  font-family 'scp'
+  content "\2022"
   padding-right .3rem
-  font-size .8rem
-  font-weight 600
+  font-size 1rem
+  font-weight 500
 
 #nav
 #cont
@@ -207,19 +212,21 @@ h3.time
 
 #nav a
 .list > li > a
+  display inline
+
+#nav a
   text-transform uppercase
   font-size .7rem
   line-height 1rem
   font-weight 200
   letter-spacing 1px
-  display inline
 
 #nav .link-next
   margin-top 2rem
   font-weight 500
 
-.list > li > a
-  margin-bottom .3rem
+.list > li
+  margin-bottom 1rem
 
 .list > li > a h1
   font-size inherit
@@ -381,7 +388,7 @@ div.toc
   padding-right 1rem
   margin-left -1rem
 
-.footer
+.footer p
   font-family 'scp'
   font-size .7rem
   font-weight 400
