--- a/urb/zod/pub/tree/src/css/leads.styl
+++ b/urb/zod/pub/tree/src/css/leads.styl
@@ -29,15 +29,13 @@
         vertical-align middle
       li a
         border-bottom none
-        text-decoration none
+        text-decoration underline
       li a h1
         margin 0
         line-height inherit
         text-transform capitalize
         font-size 1.2rem
       h1
-        text-decoration none
-        border-bottom 2px solid #000
         text-transform capitalize
         font-size 1rem
         font-weight 400
@@ -60,6 +58,10 @@
   a
     line-height 1rem
   
+  p
+    font-size 1.6rem
+    line-height 3rem
+
   .mono
     font-size 1.3rem
 
@@ -67,6 +69,7 @@
     margin 4rem 0 4rem 0
     p
       margin 0
+      font-size .7rem
     code
       line-height 1rem
       font-size .7rem
