--- a/urb/zod/pub/tree/src/css/main.styl
+++ b/urb/zod/pub/tree/src/css/main.styl
@@ -202,6 +202,7 @@ h3.time
   width 8rem 
   transition margin-top .3s ease-in-out
   overflow hidden
+  padding-top .3rem
 
 #nav #sibs > div
   margin-bottom .6rem
@@ -221,7 +222,7 @@ h3.time
   font-weight 200
   letter-spacing 1px
 
-#nav .link-next
+.link-next
   margin-top 2rem
   font-weight 500
 
