--- a/urb/zod/pub/tree/src/css/mobile.styl
+++ b/urb/zod/pub/tree/src/css/mobile.styl
@@ -14,14 +14,14 @@
     opacity 1
     width 42rem
     margin-left -21rem
-    background-color transparent
-    z-index 2
-  
-  #nav > div
     background-color #fff
+    z-index 2
   
   #nav a
     white-space nowrap
+    
+  #nav #sibs
+    width 12rem
     
   #nav #sibs > div
     height 20px
@@ -41,7 +41,7 @@
     top 0
   
   #nav > div > div
-    max-height 1rem
+    max-height 2rem
     overflow hidden
     transition max-height .3s ease-in-out
   
