--- a/urb/zod/pub/tree/src/css/leads.styl
+++ b/urb/zod/pub/tree/src/css/leads.styl
@@ -19,6 +19,7 @@
     ul.list.nav
       margin 0
       line-height 2rem
+      display inline-block
       li::before
         content ''
         padding-right none
@@ -61,6 +62,10 @@
   p
     font-size 1.6rem
     line-height 3rem
+  
+  .post p
+    font-size 1.2rem
+    line-height 2.2rem
 
   .mono
     font-size 1.3rem
