--- a/urb/zod/pub/tree/src/css/mobile.styl
+++ b/urb/zod/pub/tree/src/css/mobile.styl
@@ -51,6 +51,8 @@
   
   #cont
     top 3rem
+  #cont.no-anchor
+    top 0
 
 /* tablets + phones ----------- */
 @media only screen and (min-width: 320px) and (max-width: 1024px)
@@ -106,10 +108,9 @@
     border-right .6rem solid #000
 
   #cont
-    top 3rem
     left 0
     padding-bottom 9rem
-  
+
   #cont h1:first-child
     margin-top 0
   
