--- a/urb/zod/pub/tree/src/css/leads.styl
+++ b/urb/zod/pub/tree/src/css/leads.styl
@@ -1,4 +1,4 @@
-#cont.lead
+.lead
   #body
     margin-top 3rem
     margin-top 0
@@ -16,7 +16,7 @@
     img.logo
       margin-right 18px
       margin-top 0
-    ul.list.nav
+    ul
       margin 0
       line-height 2rem
       display inline-block
@@ -62,10 +62,6 @@
   p
     font-size 1.6rem
     line-height 3rem
-  
-  .post p
-    font-size 1.2rem
-    line-height 2.2rem
 
   .mono
     font-size 1.3rem
@@ -137,6 +133,18 @@
     top 0rem
     font-size 1rem
     line-height 1.6rem
+    
+    .post h1
+      font-size 2rem
+      line-height 3rem
+
+    .bar
+      margin-top 1rem
+      margin-bottom 1rem
+  
+      .list li h1, 
+        font-size 1rem
+        line-height 1.6rem
 
     img.logo
       display block
@@ -154,11 +162,12 @@
       font-size 1rem
       line-height 1.6rem
     
+    input.email
+      font-size 1.2rem
+      width 100%
+
     button.submit
       font-size 1rem
-
-    .mono
-      font-size .7rem
 
     .date,
     div.footer
