--- a/urb/zod/pub/tree/src/css/main.styl
+++ b/urb/zod/pub/tree/src/css/main.styl
@@ -187,7 +187,6 @@ img.logo.white
 img.logo
   height 2rem
   width 2rem
-  margin-top 1rem
 
 h3.time
   margin-top: .3rem
@@ -202,7 +201,6 @@ h3.time
   width 8rem 
   transition margin-top .3s ease-in-out
   overflow hidden
-  padding-top .3rem
 
 #nav #sibs > div
   margin-bottom .6rem
@@ -239,7 +237,7 @@ h3.time
 
 #up
   padding-right 1rem
-  margin-top -.3rem
+  margin-top -12px
 
 #sides
   float right
