--- a/urb/zod/pub/tree/src/css/mobile.styl
+++ b/urb/zod/pub/tree/src/css/mobile.styl
@@ -59,7 +59,11 @@
   body
   html
     font-size 21px
-    
+  
+  p
+    font-size 1rem
+    line-height 2rem
+
   #nav
   #cont
     width 94%
@@ -81,6 +85,7 @@
     
   #nav #sibs
     width 11rem
+    padding-top 0
 
   #nav #sibs > div
     height 20px
@@ -91,7 +96,8 @@
     font-size .7rem
   
   #nav #sides
-    float right
+    float none
+    margin-left 1rem
   
   #nav .arow-up
   #nav .arow-next
