--- a/urb/zod/pub/talk/src/css/main.styl
+++ b/urb/zod/pub/talk/src/css/main.styl
@@ -488,6 +488,8 @@ a
 #writing
   min-height 1.6rem
   min-width 1.3rem
+  max-width 32rem
+  line-height 2rem
   outline none
   padding .3rem .1rem
   margin-top -.3rem
