--- a/urb/zod/pub/tree/src/css/main.css
+++ b/urb/zod/pub/tree/src/css/main.css
@@ -155,7 +155,7 @@ pre {
   background-color: #f5f5f5;
   padding: 0.3rem;
   margin-left: -0.3rem;
-  white-space: pre-line;
+  overflow-y: scroll;
 }
 code {
   line-height: 1.2rem;
