--- a/urb/zod/pub/talk/src/css/main.css
+++ b/urb/zod/pub/talk/src/css/main.css
@@ -441,12 +441,12 @@ a {
   content: "~";
 }
 .type.private:before {
-  content: "•";
+  content: attr(data-glyph);
   font-size: 1rem;
   line-height: 1.1rem;
 }
 .type.public:before {
-  content: "▒";
+  content: attr(data-glyph);
   font-size: 0.8rem;
   line-height: 1.2rem;
 }
