--- a/urb/zod/pub/talk/src/css/main.styl
+++ b/urb/zod/pub/talk/src/css/main.styl
@@ -391,12 +391,12 @@ a
   content "~"
 
 .type.private:before
-  content "•"
+  content attr(data-glyph)
   font-size 1rem
   line-height 1.1rem
 
 .type.public:before
-  content "▒"
+  content attr(data-glyph)
   font-size .8rem
   line-height 1.2rem
 
