--- a/urb/zod/pub/talk/src/css/main.styl
+++ b/urb/zod/pub/talk/src/css/main.styl
@@ -549,4 +549,11 @@ a
   font-size .8rem
   text-transform uppercase
 
+//
+//  offline
+//
+  
+body:not(.offline) #offline
+  display none
+  
 @import 'mobile'
