--- a/urb/zod/pub/talk/src/css/main.styl
+++ b/urb/zod/pub/talk/src/css/main.styl
@@ -556,4 +556,10 @@ a
 body:not(.offline) #offline
   display none
   
+#offline
+  transition: color 0.25s ease
+  
+#offline.error
+  color: red
+  
 @import 'mobile'
