--- a/urb/zod/pub/tree/src/css/main.css
+++ b/urb/zod/pub/tree/src/css/main.css
@@ -164,6 +164,19 @@ code {
   padding: 0.2rem;
   display: inline-block;
 }
+blockquote {
+  background-color: #f5f5f5;
+  margin: 0;
+  padding: 1rem;
+  font-style: italic;
+  margin-left: 3rem;
+}
+blockquote p {
+  margin: 0;
+}
+blockquote em {
+  font-style: normal;
+}
 ul {
   list-style: none;
   padding: 0;
