nav fix and spam

--- a/urb/zod/pub/tree/src/css/main.css
+++ b/urb/zod/pub/tree/src/css/main.css
@@ -206,7 +206,6 @@ li:before {
   z-index: 0;
   margin-left: -32rem;
   overflow: hidden;
-  opacity: 0;
   transition: opacity 1s ease-in-out;
 }
 #nav.moving {
@@ -455,6 +454,21 @@ div.toc h1.t {
   font-size: 2rem;
   text-decoration: none;
   margin-bottom: 2rem;
+}
+#body .spam {
+  width: 9rem;
+  background-color: #555;
+  padding: 1rem;
+  letter-spacing: 1px;
+  font-weight: 500;
+  margin-bottom: 2rem;
+}
+#body .spam,
+#body .spam a {
+  color: #fff;
+}
+#body .spam a {
+  border-color: #fff;
 }
 #body .CodeMirror {
   font-size: 0.8rem;
