--- a/urb/zod/pub/tree/src/css/main.styl
+++ b/urb/zod/pub/tree/src/css/main.styl
@@ -136,7 +136,6 @@ li:before
   z-index 0
   margin-left -32rem
   overflow hidden
-  opacity 0
   transition opacity 1s ease-in-out
 
 #nav.moving
@@ -381,6 +380,21 @@ div.toc
     font-size 2rem
     text-decoration none
     margin-bottom 2rem
+
+#body .spam
+  width 9rem
+  background-color #555
+  padding 1rem
+  letter-spacing 1px
+  font-weight 500
+  margin-bottom 2rem
+
+#body .spam
+#body .spam a
+  color #fff
+
+#body .spam a
+  border-color #fff
 
 #body .CodeMirror
   font-size .8rem
