--- a/urb/zod/lib/base.css
+++ b/urb/zod/lib/base.css
@@ -110,14 +110,27 @@ code,
   left: 50%;
 }
 
+h1,
+h2 {
+  font-weight: 500;
+}
+
 h1 {
   font-size: 1.6rem;
-  font-weight: 500;
 }
 
 h1:after {
   content: "\2014";
   margin-left: 1rem;
+}
+
+h2 {
+  font-size: 1rem;
+}
+
+h2.advice {
+  margin-top: 2rem;
+  color: #555;
 }
 
 #c pre {
